Fixed weird line spacing on first line of paragraphs

--- a/src/client/layouts/About/style.scss
+++ b/src/client/layouts/About/style.scss
@@ -32,6 +32,7 @@
     padding: 10px 50px;
     max-width: 700px;
     text-indent: 1rem;
+    line-height: 1.5rem;
 
     &:first-of-type:first-letter {
       font-size: 120%;
