--- a/src/client/layouts/App/style.scss
+++ b/src/client/layouts/App/style.scss
@@ -30,7 +30,7 @@ html, body, #container, main {
 }
 
 p {
-  line-height: 1.5;
+  line-height: 1.5rem;
   margin: 0 0 1rem 0;
   hyphens: auto;
   text-align: justify;
