--- a/src/client/layouts/Home/style.scss
+++ b/src/client/layouts/Home/style.scss
@@ -19,7 +19,7 @@
   &__links {
     color: rgba(0,0,0,.4);
     font-weight: 300;
-    font-size: 1.5rem;
+    font-size: 1.5remrem;
     margin: 0 0 0 0;
     text-align: center;
 
